Chrome bugs fixed (white space, who knew?!?), removed green header block,

--- a/assets/styles/ie8.css
+++ b/assets/styles/ie8.css
@@ -11,7 +11,6 @@ Width: All Sizes
 .sep-bottom { border-bottom: 1px solid #E1E1E1; }
 .hdg-sep-featured { border-bottom: 2px solid #E0575A; }
 .hdg-sep-primary { border-bottom: 2px solid #BFDA5E; }
-.hdg-block-primary { background: #BFDA5E; }
 .hdg-block-tertiary { background: #E6E3FA; }
 .hdg-sep-tertiary { border-bottom: 2px solid #E6E3FA; }
 .nav-main { background: #152313; }
